--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -14,4 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version> <!-- Check for the latest version -->
+        </dependency>
+        <!-- Добавьте другие зависимости здесь -->
+    </dependencies>
+
 </project>
