--- a/Service/src/main/resources/application.properties
+++ b/Service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=postgree
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 app.allowUpdate=true
+
+app.updateUserAndCreateTicket.enabled=true
+tickets.json.path=tickets.json
